# error_status

./: Cargo.toml  LICENSE-MIT  README.md
examples/: report.rs
src/: http.rs  lib.rs  result.rs
